# Mgent

./: .gitignore  README.md  main.py  pyproject.toml
mgent/: __init__.py  anthropic_client.py  chat.py  cli.py  path_safety.py  permissions.py  tools.py
