[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mgent"
version = "0.1.0"
description = "A command-line coding agent powered by Claude."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "python-dotenv",
]

[project.scripts]
mgent = "mgent.cli:main"
